Fixed bug #40503 (json_encode() value corruption on 32bit systems with overflown values).